@@ -2,6 +2,10 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+21-Nov-2005
+~~~~~~~~~~~
+Bugfix: Let -R work again (Stephen Watson).
+
 12-Nov-2005
 ~~~~~~~~~~~
 Added initial support for .desktop files (Thomas Leonard). They are now shown
